Fixed form underline alignment issues
Label alignment issues partially fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -49,8 +49,24 @@ button {
   padding: 0;    
 }
 
-.align-md-select {
-  padding-top: 5px;
+.mat-card-content{
+  font-size: 16px;
+}
+
+.mat-input-element {
+  font-size: 16px !important;
+}
+
+md-select {
+  transform: translate(0px, 7px);
+  -webkit-transform: translate(0px, 7px);
+  -moz-transform: translate(0px, 10px);
+}
+
+.mat-select-placeholder.mat-floating-placeholder {
+  transform: scale(.75) translateY(8px) !important;
+  -webkit-transform: scale(.75) translateY(8px) !important;
+  -moz-transform: scale(.75) translateY(8px) !important;
 }
 
 .input-label {
